[gd_scene load_steps=39 format=2]

[ext_resource path="res://Sprites/Doge/DogeRun.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Doge/DogeIdle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Doge/DogeOturusaGecis.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Doge.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Doge/DogeYatimi.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 17, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 34, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 51, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 68, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 85, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 102, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 17, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 34, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 51, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 68, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 85, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 17, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 34, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 51, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 85, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 102, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 119, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 17, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 34, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 51, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 5 )
region = Rect2( 68, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 5 )
region = Rect2( 85, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 102, 0, 17, 13 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 119, 0, 17, 13 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Sit",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Run",
"speed": 15.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 29 ), SubResource( 29 ), SubResource( 29 ), SubResource( 29 ), SubResource( 29 ), SubResource( 29 ), SubResource( 29 ), SubResource( 29 ) ],
"loop": true,
"name": "Yat",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 4.14211, 4.98578 )

[sub_resource type="CircleShape2D" id=32]
radius = 10.534

[sub_resource type="CircleShape2D" id=33]
radius = 20.2698

[node name="Doge" type="KinematicBody2D"]
collision_layer = 2147483650
collision_mask = 2147483650
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 30 )
animation = "Yat"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.98401, 0.00830311 )
shape = SubResource( 31 )

[node name="Near" type="Area2D" parent="."]
collision_mask = 16385

[node name="CollisionShape2D" type="CollisionShape2D" parent="Near"]
position = Vector2( 2.9978, 0.44967 )
shape = SubResource( 32 )

[node name="Far" type="Area2D" parent="."]
position = Vector2( 3.05215, 0.244173 )
collision_mask = 16385

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Far"]
shape = SubResource( 33 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
autostart = true
[connection signal="body_entered" from="Near" to="." method="_on_Near_body_entered" flags=3]
[connection signal="body_exited" from="Far" to="." method="_on_Far_body_exited" flags=3]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout" flags=3]
